--- a/src/components/xnem-ambulance-wl-editor/xnem-ambulance-wl-editor.css
+++ b/src/components/xnem-ambulance-wl-editor/xnem-ambulance-wl-editor.css
@@ -1,5 +1,7 @@
 :host {
-  display: block;
+  --_wl-editor_gap: var(--wl-gap, 0.5rem);
+  width: 100%;
+  height: 100%;
 }
 :host {
   --_wl-editor_gap: var(--wl-gap, 0.5rem);
@@ -8,6 +10,20 @@
   flex-direction: column;
   gap: var(--_wl-editor_gap);
   padding: var(--_wl-editor_gap);
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: var(--_wl-editor_gap);
+  padding: var(--_wl-editor_gap);
+}
+
+.error {
+  margin: auto;
+  color: red;
+  font-size: 2rem;
+  font-weight: 900;
+  text-align: center;
 }
 
 .duration-slider {
